# postgres

./: .clangd  .gitignore  .gitmodules
duckdbDatasets/: duck_view.sql  load.sql  schema.sql  tpch.sql  tpch_query_view.sql
extensionDev/pg_plansplit/: Cargo.toml  pg_plansplit.control
extensionDev/pg_plansplit/src/: error.rs  hooks.rs  lib.rs  macros.rs
extensionDev/pg_plansplit/src/egmanager/: duck.rs  mod.rs
extensionDev/pg_plansplit/src/engine/: duck.rs  mod.rs
