[package]
name = "pg_plansplit"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_plansplit"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
duckdb = { version = "1.2.1", features = ["bundled"] }
once_cell = "1.21.3"
pgrx = "=0.13.1"

[dev-dependencies]
pgrx-tests = "=0.13.1"

[profile.dev]
panic = "unwind"
debug = true

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
